# latent-mesh-diffusion

./: .gitignore  AF.md  AGENTS.md  DOCUMENTATION.md  MESH_REFACTOR_CHECKLIST.md  MESH_REFACTOR_PLAN.md  NOPROB REWRITING.MD  SYSTEM-PROMPT.MD  TRAINING_CONFIG.md  chat.bat  check_cuda.py  check_gpu.py  colab_training.ipynb  create_model.bat  dataset-structure.md  functional reference library.MD  generate_curriculum.bat  generate_curriculum1.bat  generate_text.bat  launch_phase1.ps1  pyproject.toml  research.MD  rules.md  run_agk.bat  run_ingest.bat  run_llm_generate.bat  run_phase1.bat  show_model.py  start_dashboard.bat  start_server.bat  train_from_text.bat  train_mesh.bat
NoProp/: DOCUMENTATION.md  README.md  pyproject.toml  training_status.json
NoProp/scripts/: agk_data_generator.py  benchmark.py  benchmark_async.py  benchmark_backward.py  benchmark_deep.py  benchmark_long_doc.py  benchmark_matrix.py  benchmark_packing.py  benchmark_real_docs.py  benchmark_scales.py  chat.py  create_mesh_model.py  curriculum_generator.py  eval_core.py  generate_experts.py  generate_from_prompt.py  generate_with_llm.py  ingest_docs.py  mesh_dashboard.py  prepare_curriculum.py  run_full_pipeline.py  run_master.py  run_worker.py  test_decoder.py  train_core.py  train_core_only.ps1  train_latent_mesh.ps1  train_mixed_domains.ps1  train_nemotron_quality.ps1  train_on_text.py  training_monitor.py  verify_all.py  verify_hierarchy.py  verify_improvements.py
NoProp/src/: agentic_dataset.py  agk_dataset.py  async_rl.py  bin_converter.py  create_obsidian_vault.py  cross_layer_cache.py  (+42 more)
(+26 files in other folders)
