[project]
name = "noprop-mesh"
version = "0.1.0"
description = "Dynamic Diffusion Mesh — local NoProp training with TurboQuant and MTP heads"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "torchvision",
    "transformers",
    "bitsandbytes",
    "tqdm",
    "datasets>=5.0.0",
    "pynvml>=13.0.1",
    "mosaicml-streaming>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
torchvision = { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
